Revise data model for IDV
- add 'final' to variables and parameters
- rename names with "VerificationState" to use "IdentityVerificationDetails"
- rework log messages accordingly
- update test expectations for JSON output

Resolves:
IDVA3-3399
IDVA3-3400