@@ -9,27 +9,27 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.test.json.JsonCompareMode;
 import org.springframework.test.web.servlet.MockMvc;
 import uk.gov.companieshouse.api.model.common.Address;
 import uk.gov.companieshouse.api.model.common.Date3Tuple;
+import uk.gov.companieshouse.api.model.psc.IdentityVerificationDetails;
 import uk.gov.companieshouse.api.model.psc.NameElementsApi;
-import uk.gov.companieshouse.api.model.psc.PscIndividualWithVerificationStateApi;
+import uk.gov.companieshouse.api.model.psc.PscIndividualWithIdentityVerificationDetailsApi;
 import uk.gov.companieshouse.api.model.psc.PscLinks;
-import uk.gov.companieshouse.api.model.psc.VerificationState;
-import uk.gov.companieshouse.api.model.psc.VerificationStatus;
 import uk.gov.companieshouse.pscdataapi.exceptions.NotFoundException;
 import uk.gov.companieshouse.pscdataapi.service.CompanyPscService;
 
 @SpringBootTest(properties = {"feature.identity_verification=true"})
 @AutoConfigureMockMvc
-class CompanyPscWithVerificationStateGetControllerTest {
+class CompanyPscWithIdentityVerificationDetailsGetControllerTest {
 
     private static final String X_REQUEST_ID = "123456";
     private static final String MOCK_COMPANY_NUMBER = "1234567";
@@ -38,8 +38,12 @@ class CompanyPscWithVerificationStateGetControllerTest {
     private static final String ERIC_IDENTITY_TYPE = "key";
     private static final String ERIC_PRIVILEGES = "*";
     private static final String ERIC_AUTH_INTERNAL = "internal-app";
+    private static final LocalDate START_ON = LocalDate.parse("2025-06-12");
+    private static final LocalDate END_ON = LocalDate.parse("9999-12-31");
+    private static final LocalDate STATEMENT_DATE = LocalDate.parse("2025-06-01");
+    private static final LocalDate STATEMENT_DUE_DATE = LocalDate.parse("2025-06-15");
 
-    private static final String GET_INDIVIDUAL_WITH_VERIFICATION_STATE_URL = String.format(
+    private static final String GET_INDIVIDUAL_WITH_IDENTITY_VERIFICATION_DETAILS_URL = String.format(
             "/company/%s/persons-with-significant-control/individual/%s/identity-verification-details", MOCK_COMPANY_NUMBER,
             MOCK_NOTIFICATION_ID);
 
@@ -48,7 +52,7 @@ class CompanyPscWithVerificationStateGetControllerTest {
     @Autowired
     private MockMvc mockMvc;
     @Autowired
-    private CompanyPscWithVerificationStateGetController companyPscController;
+    private CompanyPscWithIdentityVerificationDetailsGetController companyPscController;
 
     @Test
     void contextLoads() {
@@ -56,11 +60,10 @@ class CompanyPscWithVerificationStateGetControllerTest {
     }
 
     @Test
-    @DisplayName("Should return 200 status with PSC data + verification state")
+    @DisplayName("Should return 200 status with PSC data + identity verification details")
     void getIndividualPSC() throws Exception {
-        when(companyPscService.getIndividualWithVerificationState(MOCK_COMPANY_NUMBER, MOCK_NOTIFICATION_ID))
-                .thenReturn(
-                        createIndividualWithVerificationState());
+        when(companyPscService.getIndividualWithIdentityVerificationDetails(MOCK_COMPANY_NUMBER, MOCK_NOTIFICATION_ID))
+                .thenReturn(createIndividualWithIdentityVerificationDetails());
 
         final String expectedData = """
                 {
@@ -87,31 +90,32 @@ class CompanyPscWithVerificationStateGetControllerTest {
                   "natures_of_control": [
                     "nature of my control"
                   ],
-                  "verification_state": {
-                    "verification_status": "VERIFIED",
-                    "verification_start_date": "2025-01-10",
-                    "verification_statement_due_date": "2025-02-05"
+                  "identity_verification_details": {
+                    "appointment_verification_start_on": "%s",
+                    "appointment_verification_end_on": "%s",
+                    "appointment_verification_statement_date": "%s",
+                    "appointment_verification_statement_due_on": "%s"
                   }
                 }
-                """;
+                """.formatted(START_ON, END_ON, STATEMENT_DATE, STATEMENT_DUE_DATE);
 
-        mockMvc.perform(get(GET_INDIVIDUAL_WITH_VERIFICATION_STATE_URL).header("ERIC-Identity", ERIC_IDENTITY)
+        mockMvc.perform(get(GET_INDIVIDUAL_WITH_IDENTITY_VERIFICATION_DETAILS_URL).header("ERIC-Identity", ERIC_IDENTITY)
                         .header("ERIC-Identity-Type", ERIC_IDENTITY_TYPE)
                         .contentType(APPLICATION_JSON)
                         .header("x-request-id", X_REQUEST_ID)
                         .header("ERIC-Authorised-Key-Roles", ERIC_PRIVILEGES)
                         .header("ERIC-Authorised-Key-Privileges", ERIC_AUTH_INTERNAL)).andExpect(status().isOk())
                 .andDo(print())
-                .andExpect(content().json(expectedData, true));
+                .andExpect(content().json(expectedData, JsonCompareMode.STRICT));
     }
 
     @Test
     @DisplayName("Should return 404 when Individual PSC not found")
     void shouldReturn404WhenIndividualPscNotFound() throws Exception {
-        when(companyPscService.getIndividualWithVerificationState(MOCK_COMPANY_NUMBER, MOCK_NOTIFICATION_ID))
+        when(companyPscService.getIndividualWithIdentityVerificationDetails(MOCK_COMPANY_NUMBER, MOCK_NOTIFICATION_ID))
                 .thenThrow(new NotFoundException("Individual PSC document not found in Mongo with id " + MOCK_NOTIFICATION_ID));
 
-        mockMvc.perform(get(GET_INDIVIDUAL_WITH_VERIFICATION_STATE_URL).header("ERIC-Identity", ERIC_IDENTITY)
+        mockMvc.perform(get(GET_INDIVIDUAL_WITH_IDENTITY_VERIFICATION_DETAILS_URL).header("ERIC-Identity", ERIC_IDENTITY)
                         .header("ERIC-Identity-Type", ERIC_IDENTITY_TYPE)
                         .contentType(APPLICATION_JSON)
                         .header("x-request-id", X_REQUEST_ID)
@@ -121,12 +125,7 @@ class CompanyPscWithVerificationStateGetControllerTest {
                 .andExpect(status().isNotFound());
     }
 
-    private static PscIndividualWithVerificationStateApi createIndividualWithVerificationState() {
-        final Address serviceAddress = new Address();
-        serviceAddress.setAddressLine1("addressLine1");
-        serviceAddress.setPostalCode("CF12 3AB");
-        serviceAddress.setPremises("1");
-
+    private static PscIndividualWithIdentityVerificationDetailsApi createIndividualWithIdentityVerificationDetails() {
         final Address residentialAddress = new Address();
         residentialAddress.setPremises("Cottage");
         residentialAddress.setAddressLine1("Home street");
@@ -140,17 +139,17 @@ class CompanyPscWithVerificationStateGetControllerTest {
         final PscLinks pscLinks = new PscLinks();
         pscLinks.setSelf("/company/123/persons-with-significant-control/456");
 
-        return new PscIndividualWithVerificationStateApi()
-                .kind(PscIndividualWithVerificationStateApi.KindEnum.INDIVIDUAL_PERSON_WITH_SIGNIFICANT_CONTROL)
+        return new PscIndividualWithIdentityVerificationDetailsApi().kind(
+                PscIndividualWithIdentityVerificationDetailsApi.KindEnum.INDIVIDUAL_PERSON_WITH_SIGNIFICANT_CONTROL)
                 .name("Andy Bob Smith")
                 .nameElements(nameElementsApi)
                 .address(residentialAddress)
                 .nationality("British")
-                .naturesOfControl(Arrays.asList("nature of my control"))
+                .naturesOfControl(List.of("nature of my control"))
                 .dateOfBirth(new Date3Tuple(0, 2, 2000))
                 .links(pscLinks)
-                .verificationState(new VerificationState(VerificationStatus.VERIFIED, LocalDate.of(2025, 1, 10),
-                        LocalDate.of(2025, 2, 5)));
+                .identityVerificationDetails(
+                new IdentityVerificationDetails(START_ON, END_ON, STATEMENT_DATE, STATEMENT_DUE_DATE));
     }
 
 }
